<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/data_holder"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_light">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/lat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/enter_pass"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip"
        android:ems="10"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coord_format"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:id="@+id/format_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/TextView01"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/format_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/format_d"/>

        <RadioButton
            android:id="@+id/format_d_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/format_d_m"/>

        <RadioButton
            android:id="@+id/format_d_m_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/format_d_m_s"/>

        <RadioButton
            android:id="@+id/format_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/format_google"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/other_settings"/>
    <Button
        android:id="@+id/wizard_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_wizard"
        android:layout_marginTop="5dp"/>
    <Button
        android:id="@+id/clear_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_history"
        android:layout_marginTop="5dp"/>
    <Button
        android:id="@+id/simulator_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_test"
        android:layout_marginTop="5dp"/>
</LinearLayout></ScrollView>