<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_home"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/menu_reader"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/history"/>
    <item
        android:id="@+id/menu_sender"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_sender"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <!--<item
        android:id="@+id/menu_test"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_test"/>
    <item
        android:id="@+id/menu_wizard"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_wizard"/>
    <item
        android:id="@+id/menu_log"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_show_log"/>-->
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_help"/>
</menu>