<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:id="@+id/google_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons_holder"
        ></RelativeLayout>
    <!-- hack to fix ugly black artefact with maps v2 -->
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:background="@android:color/transparent" />
    <LinearLayout
        android:id="@+id/buttons_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/map_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selectable_btn"
                android:text="@string/map_map"
                android:textSize="12sp" />

            <Button
                android:id="@+id/satelite_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selectable_btn"
                android:text="@string/map_satelite"
                android:textSize="12sp" />

            <Button
                android:id="@+id/hybrid_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selectable_btn"
                android:text="@string/map_hybrid"
                android:textSize="12sp" />

            <Button
                android:id="@+id/terrain_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selectable_btn"
                android:text="@string/map_terrain"
                android:textSize="12sp" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/recieved_position_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/google_maps_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_in_google_maps"
                android:textSize="12sp" />

            <Button
                android:id="@+id/get_directions_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/get_directions"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>