<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/background_light" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBox android:id="@id/allow_all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/allow_all" android:layout_alignParentLeft="true" />
    <TextView android:id="@id/from_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/select_contacts" android:layout_below="@id/allow_all" android:layout_alignParentLeft="true" />
    <ListView android:id="@id/contacts" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/add_contact" android:layout_below="@id/from_text" android:layout_alignParentLeft="true" />
    <Button android:id="@id/add_contact" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/add_contact" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>